# Wolfgang-Alpha

./: .gitignore  Cargo.toml  README.md
assets/: main.css  tailwind.css
src/: defaults.rs  js_snippets.rs  lang.rs  main.rs  math.rs  parser.rs  repl.rs
src/lang/: evaluator.rs  lexer.rs  parser.rs
src/math/: complex.rs  differentiation.rs  expressions.rs  integration.rs  matrices_and_vectors.rs  objects.rs  operations.rs  utils.rs
src/math/matrices_and_vectors/: adj.rs  lu.rs  matmul.rs  norms.rs  ops.rs  qr.rs  transposition.rs
style/: main.css
