[package]
name = "wolfgang_alpha"
version = "0.1.0"
authors = ["LvnRtg <ortega@lieven.fr>"]
edition = "2021"

[dependencies]
getrandom = { version = "0.2.17", features = ["js"] }
dioxus = { version = "0.7.5", features = [] }
tracing-wasm = "0.2.1"
dioxus-logger = "0.5.1"
web-sys = "0.3.91"
rand = "0.8"
statrs = "0.18.0"
argmin = "0.11.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
